# Raska

./: .gitignore  .rask_current_project  .rask_projects.json  .rask_state.json  .rask_state_main-development.json  BUGFIX_AI_FORMATTING.md  Cargo.toml  DOCUMENTATION.md  My New App.md  README.md  USER_GUIDE.md  ai_generated_plan.md  ai_generated_roadmap.md  claude.md  development-roadmap.md  example_config.toml  plan.md  roadmap.md  start-web.sh  test_roadmap.md
src/: cli.rs  commands.rs  config.rs  main.rs  markdown_writer.rs  model.rs  parser.rs  project.rs  state.rs  ui.rs
src/ai/: gemini.rs  mod.rs  models.rs  service.rs
src/cli/: ai.rs  bulk.rs  config.rs  notes.rs  phase.rs  project.rs  template.rs  types.rs
src/commands/: ai.rs  analytics.rs  bulk.rs  config.rs  core.rs  dependencies.rs  export.rs  interactive.rs  mod.rs  notes.rs  phases.rs  project.rs  templates.rs  utils.rs  web.rs
src/ui/: analytics.rs  dependencies.rs  helpers.rs  messages.rs  mod.rs  progress.rs  projects.rs  roadmap.rs  tasks.rs
src/web/: mod.rs  server.rs  watcher.rs  websocket.rs
src/web/handlers/: mod.rs
src/web/routes/: ai.rs  api.rs  mod.rs  projects.rs  static_files.rs  tasks.rs
test-web/: test-roadmap.md
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/api/: client.ts  websocket.ts
web-ui/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx
web-ui/src/components/AI/: ChatInterface.tsx
web-ui/src/components/Dashboard/: Dashboard.tsx  PhaseProgress.tsx  ProjectOverview.tsx  RecentActivity.tsx  TasksOverview.tsx  index.ts
web-ui/src/components/Dependencies/: DependencyGraph.tsx
web-ui/src/components/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
web-ui/src/components/UI/: Badge.tsx  Button.tsx  Card.tsx  index.ts
web-ui/src/pages/: AIPage.tsx  DependenciesPage.tsx
web-ui/src/stores/: appStore.ts
web-ui/src/types/: index.ts
web-ui/src/utils/: index.ts
