[package]
name = "rask"
version = "2.3.0"
edition = "2021"
description = "An advanced CLI project planner with tags, priorities, dependencies, and multi-project support"
license = "MIT"
authors = ["Tito Sala"]
repository = "https://github.com/tito-sala/rask"
keywords = ["cli", "project-management", "task-manager", "productivity", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"
