[package]
name = "rask"
version = "3.3.0"
edition = "2021"
description = "An advanced CLI project planner with tags, priorities, dependencies, and multi-project support"
license = "MIT"
authors = ["Tito Sala"]
repository = "https://github.com/tito-sala/rask"
keywords = ["cli", "project-management", "task-manager", "productivity", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
pulldown-cmark = "0.9"
colored = "2.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
inquire = "0.7.5"
toml = "0.8"
dirs = "5.0"
# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
# AI integration (Google Gemini)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# For better error handling
anyhow = "1.0"
# Environment variables
dotenv = "0.15"
# UUID for session tracking
uuid = { version = "1.0", features = ["v4"] }
# Async traits for AI providers
async-trait = "0.1"
# Regular expressions for improved parsing
regex = "1.0"

[build-dependencies]
